--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openmrs-ohri-app", 
+  "name": "openmrs-ohri-app",
   "version": "0.6.2",
   "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-app.js",
@@ -16,9 +16,27 @@
     "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
     "typescript": "tsc",
     "prepublishOnly": "npm run build",
-    "test": "jest --passWithNoTests",
-    "coverage": "npm test -- --coverage",
-    "test:badges": "npm run test:coverage && jest-coverage-badges--output './badges' "
+    "test": "jest --config ./jest.config.js --passWithNoTests",
+    "test:coverage": "npm test -- --coverage",
+    "test:badges": "npm run test:coverage && jest-coverage-badges --output './badges' "
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": ["json-summary", "lcov"],
+    "collectCoverageFrom": ["./src/components/**", "!./src/components/**/*.snap"],
+    "transform": {
+      "^.+\\.tsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": ["/node_modules/(?!@openmrs)"],
+    "moduleNameMapper": {
+      "\\.(s?css)$": "identity-obj-proxy",
+      "^@carbon/icons-react/es/(.*)$": "@carbon/icons-react/lib/$1",
+      "^carbon-components-react/es/(.*)$": "carbon-components-react/lib/$1",
+      "@openmrs/esm-framework": "@openmrs/esm-framework/mock",
+      "react-i18next": "<rootDir>/__mocks__/react-i18next.js",
+      "lodash-es": "lodash"
+    },
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.ts"]
   },
   "browserslist": [
     "extends browserslist-config-openmrs"
@@ -44,10 +62,14 @@
   "dependencies": {
     "@carbon/icons-react": "^10.18.0",
     "carbon-components-react": "^7.25.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.6",
+    "jest-coverage-badges": "^1.1.2",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
     "react-scroll": "^1.8.2",
+    "react-test-renderer": "^16.9.0",
     "systemjs-webpack-interop": "^1.1.0",
     "yup": "^0.29.1"
   },
@@ -72,7 +94,6 @@
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
     "@types/carbon-components-react": "^7.10.9",
-    "carbon-components": "^10.19.0",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.2",
@@ -82,10 +103,12 @@
     "@types/single-spa-react": "^2.12.0",
     "@types/webpack-env": "^1.15.1",
     "@types/yup": "^0.29.3",
+    "@typescript-eslint/parser": "^4.26.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "browserslist-config-openmrs": "^1.0.0",
+    "carbon-components": "^10.19.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
@@ -98,6 +121,7 @@
     "husky": "^3.0.4",
     "i18next": "^19.4.2",
     "identity-obj-proxy": "^3.0.0",
+    "istanbul-badges-readme": "^1.4.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^4.14.1",
