--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "webpack --mode production",
     "analyze": "webpack --mode=production --env.analyze=true",
     "lint": "eslint src --ext tsx",
-    "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
+    "prettier": "prettier --config prettnpx openmrs develop --backend https://ohri-working.globalhealthapp.netier.config.js --write \"src/**/*.{ts,tsx}\"",
     "typescript": "tsc",
     "prepublishOnly": "npm run build",
     "test": "jest --config ./jest.config.js --passWithNoTests",
