--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openmrs-ohri-app",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-ohri-app.js",
   "main": "src/index.ts",
@@ -13,7 +13,7 @@
     "build": "webpack --mode production",
     "analyze": "webpack --mode=production --env.analyze=true",
     "lint": "eslint src --ext tsx",
-    "prettier": "prettier --config prettnpx openmrs develop --backend https://ohri-working.globalhealthapp.netier.config.js --write \"src/**/*.{ts,tsx}\"",
+    "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
     "typescript": "tsc",
     "prepublishOnly": "npm run build",
     "test": "jest --config ./jest.config.js --passWithNoTests",
