--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     branches: 
       - '*'
-    types: [opened, synchronize, reopened, closed]
+    types: [opened]
   release:
     types:
       - created
