--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest-coverage-badges": "^1.1.2",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
+    "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-scroll": "^1.8.2",
     "react-test-renderer": "^16.9.0",
@@ -102,14 +103,14 @@
     "eslint-config-prettier": "^6.13.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "fork-ts-checker-webpack-plugin": "^6.3.3",
     "husky": "^3.0.4",
     "i18next": "^19.4.2",
     "identity-obj-proxy": "^3.0.0",
     "istanbul-badges-readme": "^1.4.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "openmrs": "next",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
@@ -126,6 +127,6 @@
     "webpack": "^5.37.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^4.2.1"
   }
 }
