--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^10.18.0",
+    "ace-builds": "^1.4.12",
     "carbon-components-react": "^7.25.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
