--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -72,7 +72,7 @@ jobs:
 
     needs: build
     
-    if: ${{ github.event == 'refs/heads/working' || 'refs/heads/dev' || 'refs/heads/master' }}  
+    if: ${{ github.event_name == 'push' }}
      
     steps:
       - uses: actions/checkout@v2
@@ -117,7 +117,7 @@ jobs:
 
     needs: pre_release 
     
-    if: ${{ github.event_name == 'push' }} 
+    if: ${{ github.ref == 'refs/heads/working' }} 
     
     steps:
       # Update the Microfrontends to reflect what we have in the Working branch
