--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-collapse": "^5.1.0",
     "react-scroll": "^1.8.2",
     "react-test-renderer": "^16.9.0",
     "react-waypoint": "^10.1.0",
@@ -79,7 +80,7 @@
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
     "@types/carbon-components-react": "^7.36.1",
-    "@types/jest": "^24.9.1",
+    "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
@@ -90,12 +91,12 @@
     "@types/yup": "^0.29.3",
     "@typescript-eslint/parser": "^4.26.0",
     "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^27.2.4",
     "babel-loader": "^8.0.6",
     "browserslist-config-openmrs": "^1.0.0",
     "carbon-components": "^10.19.0",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.0.0",
+    "concurrently": "^6.3.0",
     "css-loader": "^3.2.0",
     "dayjs": "^1.8.16",
     "eslint": "^7.10.0",
@@ -107,9 +108,9 @@
     "i18next": "^19.4.2",
     "identity-obj-proxy": "^3.0.0",
     "istanbul-badges-readme": "^1.4.0",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "node-sass": "^4.14.1",
+    "jest": "^27.2.4",
+    "jest-cli": "^27.2.4",
+    "node-sass": "^6.0.1",
     "openmrs": "next",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
@@ -126,6 +127,6 @@
     "webpack": "^5.37.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^4.3.0"
   }
 }
