--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -72,7 +72,7 @@ jobs:
 
     needs: build
     
-    if: ${{ github.ref == 'refs/heads/working' || 'refs/heads/dev' || 'refs/heads/master' }}  
+    if: ${{ github.event_name == 'push' }}
      
     steps:
       - uses: actions/checkout@v2
