--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -124,7 +124,7 @@ jobs:
       - uses: garygrossgarten/github-action-ssh@release
         name: Run the Update MicroFronEnd Script
         with:
-            command: cd /usr/share/tomcat/microfrontends/working && node microfrontends.release.js --src esm_packages.json  --type demo --dest microfrontends.json && /bin/bash update_microfrontends.sh
+            command: cd /usr/share/tomcat/microfrontends/working && node microfrontends.release.js --src esm_packages.json  --type working --dest microfrontends.json && /bin/bash update_microfrontends.sh
             host: ${{ secrets.HISTAC_HOST }}
             username: ${{ secrets.HISTAC_USERNAME }}
             privateKey: ${{ secrets.HISTAC_KEY}}
