--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "moment": "^2.29.1",
     "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-markdown": "^7.1.0",
     "react-scroll": "^1.8.2",
     "react-test-renderer": "^16.9.0",
     "react-waypoint": "^10.1.0",
