--- a/package.json
+++ b/package.json
@@ -48,11 +48,12 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.6",
-    "jest-coverage-badges": "^1.1.2",
+    "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
     "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-markdown": "^7.1.0",
     "react-scroll": "^1.8.2",
     "react-test-renderer": "^16.9.0",
     "react-waypoint": "^10.1.0",
@@ -97,7 +98,7 @@
     "browserslist-config-openmrs": "^1.0.0",
     "carbon-components": "^10.19.0",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.0.0",
+    "concurrently": "^6.3.0",
     "css-loader": "^3.2.0",
     "dayjs": "^1.8.16",
     "eslint": "^7.10.0",
