--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "file-loader": "^6.2.0",
     "browserslist-config-openmrs": "^1.0.0",
     "carbon-components": "^10.19.0",
     "clean-webpack-plugin": "^3.0.0",
