--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -72,7 +72,7 @@ jobs:
 
     needs: build
     
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event.pull_request.merged }}
      
     steps:
       - uses: actions/checkout@v2
