--- a/package.json
+++ b/package.json
@@ -95,7 +95,6 @@
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "file-loader": "^6.2.0",
     "browserslist-config-openmrs": "^1.0.0",
     "carbon-components": "^10.19.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -107,6 +106,8 @@
     "eslint-config-ts-react-important-stuff": "^3.0.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.3.3",
     "husky": "^3.0.4",
     "i18next": "^19.4.2",
