--- a/src/ohri-patient-dashboards-config.json
+++ b/src/ohri-patient-dashboards-config.json
@@ -28,5 +28,21 @@
         ]
       }
     }
+  },
+  "@openmrs/esm-styleguide": {
+    "Brand color #1": "#1A3054",
+    "Brand color #2": "#131E35",
+    "Brand color #3": "#0078A6"
+  },
+  "@openmrs/esm-login-app": {
+    "logo": {
+      "src": "https://ohri-demo.globalhealthapp.net/images/logo-transparent.png",
+      "alt": "Logo"
+    }
+  },
+  "@openmrs/esm-primary-navigation-app": {
+    "logo": {
+      "src": "https://ohri-demo.globalhealthapp.net/images/logo-white.png"
+    }
   }
 }
