--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,12 +19,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+    steps: 
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: subdir/package-lock.json 
+      - name: restore lerna cache
+        uses: actions/cache@v3
+        with:
+          path: **/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - run: npx lerna bootstrap
       - run: npx lerna run lint -- --fix
       - name: Upload Artifacts
@@ -42,12 +48,19 @@ jobs:
     if: ${{ github.event_name == 'push' }}
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - name: restore lerna cache
+        uses: actions/cache@v3
         with:
-          node-version: '14'
-          registry-url: 'https://registry.npmjs.org'
+          path: **/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 15
+          cache: 'npm'
+          cache-dependency-path: subdir/package-lock.json
+      - run: npm ci
+      - run: npm test
       - run: npx lerna bootstrap 
       - run: npx lerna version patch --no-git-tag-version --no-push --yes
       - run: npx lerna version "$(node -e "console.log(require('./lerna.json').version)")-pre.${{ github.run_number }}" --no-git-tag-version --yes
@@ -61,7 +74,7 @@ jobs:
           git commit -m "Prerelease version" --no-verify  
       - run: npm run ci:publish-next
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_OHRI_ACCESS_TOKEN }}
 
   release:
     runs-on: ubuntu-latest
@@ -71,16 +84,16 @@ jobs:
     if: ${{ github.event_name == 'release' }}
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '14'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: 15
+          cache: 'npm'
+          cache-dependency-path: subdir/package-lock.json
       - run: npx lerna bootstrap
       - run: npm run ci:publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_OHRI_ACCESS_TOKEN }}
 
   working:
       runs-on: ubuntu-latest
@@ -130,18 +143,18 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Download Artifacts
         uses: actions/download-artifact@v2
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
       - run: npx lerna bootstrap
       - run: npm run ci:publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_OHRI_ACCESS_TOKEN }}
 
   pre_demo_export_concepts:
       runs-on: ubuntu-latest
