--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,7 +61,7 @@ jobs:
           # cache: 'npm'
           # cache-dependency-path: subdir/package-lock.json
       - run: npx lerna bootstrap 
-      - run: npx lerna version patch --no-git-tag-version --no-push --yes
+      #- run: npx lerna version patch --no-git-tag-version --no-push --yes 
       - run: npx lerna version "$(node -e "console.log(require('./lerna.json').version)")-pre.${{ github.run_number }}" --no-git-tag-version --yes
       - name: setup git config
         run: |
