--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   ],
   "npmClient": "npm",
   "useWorkspaces": true,
-  "version": "0.6.45",
+  "version": "0.6.46-alpha.0",
   "command": {
     "publish": {
       "verifyAccess": false
