--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@ohri/openmrs-esm-ohri",
   "private": true,
   "description": "OHRI MicroFrontend for OpenMRS SPA",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "ci:prepublish": "lerna publish from-package --no-git-reset --yes --dist-tag next",
     "ci:prerelease": "lerna version prerelease --no-git-tag-version --yes",
