--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ohri/openmrs-esm-ohri",
+  "name": "@ohri/openmrs-esm-ohri",
   "private": true,
   "description": "OHRI MicroFrontend for OpenMRS SPA",
   "workspaces": ["packages/*"],
