--- a/package.json
+++ b/package.json
@@ -111,5 +111,9 @@
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
