--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "packages/*"
   ],
   "scripts": {
-    "ci:prepublish": "lerna publish from-package --no-git-reset --yes --dist-tag next",
+    "ci:prepublish": "lerna publish --dist-tag next",
     "ci:prerelease": "lerna version prerelease --no-git-tag-version --yes",
     "ci:publish": "lerna publish from-package --yes",
     "ci:release": "lerna version --no-git-tag-version",
