--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openmrs-esm-ohri-commons-lib",
-  "version": "0.6.44-pre.0",
+  "version": "0.6.44",
   "description": "Commons library for shared assets for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/ohri-commons-lib.js",
   "main": "src/index.ts",
