--- a/packages/esm-hiv-app/package.json
+++ b/packages/esm-hiv-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openmrs-esm-ohri-hiv-app",
-  "version": "0.6.44-pre.0",
+  "version": "0.6.44",
   "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-hiv-app.js",
   "main": "src/index.ts",
