--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.17.9",
-    "@openmrs/esm-framework": "^3.4.1-pre.77",
+    "@openmrs/esm-framework": "3.4.1-pre.189",
     "@testing-library/dom": "^7.20.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^10.4.3",
@@ -94,7 +94,7 @@
     "jest-cli": "^24.9.0",
     "lerna": "^4.0.0",
     "node-sass": "^6.0.1",
-    "openmrs": "^3.4.1-pre.77",
+    "openmrs": "3.4.1-pre.189",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
