--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -118,7 +118,7 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^6.0.1",
-    "openmrs": "^3.2.1-pre.1055",
+    "openmrs": "3.4.1-pre.189",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
