--- a/packages/esm-hiv-app/package.json
+++ b/packages/esm-hiv-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ohri/openmrs-esm-ohri-hiv-app",
   "version": "0.6.52",
-  "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
+  "description": "HIV microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-hiv-app.js",
   "main": "src/index.ts",
   "license": "MIT",
@@ -120,7 +120,7 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^6.0.1",
-    "openmrs": "^3.2.1-pre.1055",
+    "openmrs": "3.4.1-pre.189",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
