--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "workspaces": [
     "packages/*"
   ],
+  "keywords": [
+    "openmrs"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "ci:prepublish": "lerna publish from-package --no-git-reset --yes --dist-tag next",
     "ci:prerelease": "lerna version prerelease --no-git-tag-version --yes",
@@ -26,6 +32,11 @@
     "ci:publish-next-patch": "lerna version patch && lerna publish from-package --no-git-reset --dist-tag next --yes",
     "release": "lerna version --no-git-tag-version",
     "setup": "npx lerna clean --yes && npx lerna bootstrap && npx lerna run build"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && concurrently 'npm:verify'"
+    }
   },
   "dependencies": {
     "@carbon/icons-react": "^10.49.0",
@@ -55,16 +66,16 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.17.9",
-    "@openmrs/esm-framework": "3.4.1-pre.189",
+    "@openmrs/esm-framework": "4.x",
     "@testing-library/dom": "^7.20.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^10.4.3",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^12.0.11",
     "@types/carbon-components-react": "^7.55.0",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.182",
-    "@types/react": "^16.14.25",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/single-spa-react": "^2.12.0",
@@ -94,14 +105,12 @@
     "jest-cli": "^24.9.0",
     "lerna": "^4.0.0",
     "node-sass": "^6.0.1",
-    "openmrs": "3.4.1-pre.189",
+    "openmrs": "4.x",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-i18next": "^11.16.7",
-    "react-router": "^5.3.1",
-    "react-router-dom": "^5.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
     "rxjs": "^6.6.2",
     "sass-loader": "^10.2.1",
     "style-loader": "^1.0.0",
@@ -113,18 +122,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "resolutions": {
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2"
-  },
-  "keywords": [
-    "openmrs"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently 'npm:verify'"
-    }
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5"
   }
 }
