--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohri/openmrs-esm-ohri-cervical-cancer-app",
-  "version": "0.6.54",
+  "version": "1.0.0",
   "description": "A custom microfrontend for cervical cancer for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-cervical-cancer-app.js",
   "main": "src/index.ts",
@@ -31,6 +31,7 @@
       "pre-commit": "pretty-quick --staged && concurrently 'npm:test' 'npm:typescript' 'npm:lint'"
     }
   },
+  "gitHead": "5028fd4428bcee71b898cfbaee1acb7e7d0acb15",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UCSF-IGHS/openmrs-esm-ohri.git"
@@ -49,24 +50,19 @@
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
     "@ohri/openmrs-esm-ohri-commons-lib": "next",
-    "react-ace": "^9.4.4",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-markdown": "^7.1.0",
-    "react-scroll": "^1.8.2",
     "react-test-renderer": "^16.9.0",
-    "react-waypoint": "^10.1.0",
     "semver": "^7.3.5",
     "systemjs-webpack-interop": "^2.3.2",
     "yup": "^0.29.1"
   },
   "peerDependencies": {
-    "@openmrs/esm-framework": "3.x",
-    "@openmrs/esm-patient-common-lib": "3.x",
+    "@openmrs/esm-framework": "4.x",
+    "@openmrs/esm-patient-common-lib": "4.x",
     "carbon-components": "^10.19.0",
     "carbon-icons": "^7.0.7",
     "dayjs": "^1.8.16",
-    "react": "^16.9.0",
-    "react-i18next": "^11.3.4",
+    "react": "^18.2.0",
+    "react-i18next": "^11.7.0",
     "swr": "^1.1.2"
   },
   "devDependencies": {
@@ -76,20 +72,15 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.17.8",
-    "@openmrs/esm-framework": "3.4.1-pre.189",
-    "@openmrs/esm-patient-common-lib": "3.2.1-pre.91",
-    "@testing-library/dom": "^7.20.0",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^10.4.3",
-    "@testing-library/user-event": "^12.0.11",
+    "@openmrs/esm-framework": "4.x",
+    "@openmrs/esm-patient-common-lib": "4.x",
     "@types/carbon-components-react": "^7.36.1",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.161",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/single-spa-react": "^2.12.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/webpack-env": "^1.15.1",
     "@types/yup": "^0.29.3",
     "@typescript-eslint/parser": "^4.26.0",
@@ -121,11 +112,11 @@
     "openmrs": "3.4.1-pre.189",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-i18next": "^11.16.2",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "rxjs": "^6.6.2",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.0.0",
@@ -136,6 +127,5 @@
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.2.1"
-  },
-  "gitHead": "5028fd4428bcee71b898cfbaee1acb7e7d0acb15"
+  }
 }
