--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohri/openmrs-esm-ohri-form-render-app",
-  "version": "0.6.54",
+  "version": "1.0.0",
   "description": "A Forms Rendering microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-form-render-app.js",
   "main": "src/index.ts",
@@ -40,6 +40,10 @@
   "browserslist": [
     "extends browserslist-config-openmrs"
   ],
+  "gitHead": "5028fd4428bcee71b898cfbaee1acb7e7d0acb15",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@carbon/icons-react": "^10.18.0",
     "ace-builds": "^1.4.12",
@@ -84,14 +88,14 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^6.0.1",
-    "openmrs": "3.4.1-pre.189",
+    "openmrs": "4.x",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-i18next": "^11.3.4",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "rxjs": "^6.6.2",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.0.0",
@@ -103,15 +107,11 @@
     "webpack-dev-server": "^4.2.1"
   },
   "peerDependencies": {
-    "@openmrs/esm-framework": "3.x",
+    "@openmrs/esm-framework": "4.x",
     "carbon-components": "^10.19.0",
     "carbon-icons": "^7.0.7",
     "dayjs": "^1.8.16",
-    "react": "^16.9.0",
-    "react-i18next": "^11.3.4"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "gitHead": "5028fd4428bcee71b898cfbaee1acb7e7d0acb15"
+    "react": "^18.2.0",
+    "react-i18next": "^11.18.6"
+  }
 }
