--- a/packages/esm-ohri-core-app/package.json
+++ b/packages/esm-ohri-core-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohri/openmrs-esm-ohri-core-app",
-  "version": "0.6.54",
+  "version": "1.0.0",
   "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/ohri-core-app.js",
   "main": "src/index.ts",
@@ -34,6 +34,7 @@
       "pre-commit": "pretty-quick --staged && concurrently 'npm:test' 'npm:typescript' 'npm:lint'"
     }
   },
+  "gitHead": "5028fd4428bcee71b898cfbaee1acb7e7d0acb15",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UCSF-IGHS/openmrs-esm-ohri.git"
@@ -51,27 +52,21 @@
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
-    "react-ace": "^9.4.4",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-markdown": "^7.1.0",
-    "react-scroll": "^1.8.2",
     "react-test-renderer": "^16.9.0",
-    "react-waypoint": "^10.1.0",
     "semver": "^7.3.5",
     "systemjs-webpack-interop": "^2.3.2",
     "yup": "^0.29.1"
   },
   "peerDependencies": {
-    "@openmrs/esm-framework": "3.x",
-    "@openmrs/esm-patient-common-lib": "3.x",
+    "@openmrs/esm-framework": "4.x",
+    "@openmrs/esm-patient-common-lib": "4.x",
     "carbon-components": "^10.19.0",
     "carbon-icons": "^7.0.7",
     "dayjs": "^1.8.16",
-    "react": "^16.9.0",
-    "react-i18next": "^11.3.4"
+    "react": "^18.2.0",
+    "react-i18next": "^11.7.0"
   },
   "devDependencies": {
-    "@openmrs/esm-patient-common-lib": "3.2.1-pre.91"
-  },
-  "gitHead": "5028fd4428bcee71b898cfbaee1acb7e7d0acb15"
+    "@openmrs/esm-patient-common-lib": "4.x"
+  }
 }
